2006-02-16  Martin Baulig  <martin@ximian.com>

	* FieldInfo.cs (FieldInfo.Mono_GetGenericFieldDefinition): Removed.

2006-02-15  Martin Baulig  <martin@ximian.com>

	* MethodBase.cs (MethodBase.GetGenericMethodDefinition): Removed.
	(MethodBase.Mono_IsInflatedMethod): Removed.
	(MethodBase.HasGenericParameters): Removed.

	* MethodInfo.cs (MethodInfo.GetGenericMethodDefinition): Moved
	here from MethodBase.

	* MonoMethod.cs
	(MonoMethod.IsGenericMethodDefinition): This is now an icall.
	(MonoMethod.IsGenericMethod): Likewise.

2006-02-14  Martin Baulig  <martin@ximian.com>

	* MonoMethod.cs
	(MonoCMethod.IsGenericMethod): Override this and return false; the
	MS runtime doesn't throw an exception here.

2006-02-08  Martin Baulig  <martin@ximian.com>

	* MonoGenericClass.cs (MonoGenericClass.IsAssignableFrom):
	Override and implement this; fixes #77395.	

2006-02-07  Martin Baulig  <martin@ximian.com>

	* MonoMethod.cs
	(MonoMethod.IsGenericMethod): Only return true for "real" generic
	methods and not for arbitrary instantiated methods.
	(MonoMethod.IsGenericMethodDefinition): Only return true for
	generic method definitions, but not for instantiated generic
	methods.  This is no longer an interncall.  Fixes #77466.

2006-02-03  Zoltan Varga  <vargaz@gmail.com>

	* MethodBase.cs MonoMethod.cs: Implement IsGenericMethod property.
	Fixes #77460.

2005-12-23  Sebastien Pouliot  <sebastien@ximian.com>

	* Assembly.cs: Fixed #75950. The icall has been changed to accept a 
	boolean so it can return a non-escaped code base.

2005-11-16  Atsushi Enomoto  <atsushi@ximian.com>

	* MonoMethod.cs : made MakeGenericMethod() indirect icall to
	  MakeGenericMethod_impl() and raise an error when it returns null.

2005-11-15  Zoltan Varga  <vargaz@gmail.com>

	* Module.cs: Add MDStreamVersion property.

	* Assembly.cs AssemblyNameFlags.cs FieldInfo.cs PropertyInfo.cs 
	CustomAttributeData.cs PortableExecutableKinds.cs 